# airbnb-clone2-backend

./: README.md  pyproject.toml  render.yaml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_booking_guests.py  0003_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py  permissions.py
config/: authentication.py  permissions.py  schema.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_detail_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_room_alter_video_experience.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  schema.py  serializer.py  tests.py  types.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  0005_alter_room_amenities_alter_room_category_and_more.py
users/: admin.py  models.py  mutations.py  schema.py  serializers.py  types.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_alter_user_avatar.py  0004_rename_genter_user_gender_alter_user_currency.py
wishlists/: admin.py  serializers.py  urls.py  views.py
wishlists/migrations/: 0001_initial.py  (+1 more)
