[tool.poetry]
name = "airbnb-clone2-backend"
version = "0.1.0"
description = ""
authors = ["June Roh <texasroh@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone2_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
