[tool.poetry]
name = "airbnb-clone2-backend"
version = "0.1.0"
description = ""
authors = ["June Roh <texasroh@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone2_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
djangorestframework = "^3.13.1"
strawberry-graphql = {extras = ["debug-server"], version = "^0.133.5"}
strawberry-graphql-django = "^0.5.3"
PyJWT = "^2.5.0"
django-environ = "^0.9.0"
django-cors-headers = "^3.13.0"
requests = "^2.28.1"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.4"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
sentry-sdk = "^1.10.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
